<resources>
    <string name="app_name">SocialCookingApp</string>
    <string name="bonjour">Hello</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="application_logo">Application logo</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="connexion">Connexion</string>
    <string name="myname">Jason Smith</string>
    <string name="myProfile">My profile</string>
    <string name="search">Search</string>
    <string name="nextRecipeName">Chicken cacciatore</string>
    <string name="your_next_recipe">Your next recipe</string>
    <string name="nextRecipeBy">by Heidi Bloch</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="back">Back</string>
    <string name="recipeTitle">Chicken cacciatore one-pot</string>
    <string name="main_ingredients">Main ingredients</string>
    <string name="event_date">Event Date</string>
    <string name="price">Price</string>
    <string name="spices">Spices</string>
    <string name="ingredientList">2 tbsp olive oil \n 4–6 skin-on, bone-in chicken thighs \n 1 onion \n 2 garlic cloves \n 250ml red wine \n 2 x 400g cans cherry tomatoes \n 1 chicken stock cube \n 1 tbsp balsamic vinegar</string>
    <string name="spiceList">2 bay leaves \n 4 thyme sprigs \n 2 rosemary sprigs \n small bunch of parsley \n 2 tbsp capers</string>
    <string name="eventDate"><![CDATA[Apr. 5 -> 17:00]]></string>
    <string name="priceQty">$$$$</string>
    <string name="join_the_event">Join the kitchen</string>
    <string name="username">CookingAdmin</string>
    <string name="language">language</string>
    <string name="difficulty">difficulty</string>
    <string name="userLogIn">User</string>
    <string name="usernamestar">UserName*</string>
    <string name="nameStar">Name*</string>
    <string name="emailStar">Email*</string>
    <string name="personal_description">Personal Description</string>
    <string name="url_photo">URL photo</string>
    <string name="birthday_dd_mm_yyyy">Birthday DD/MM/YYYY</string>
    <string name="select_language">Select language</string>
    <string name="en">EN</string>
    <string name="fr">FR</string>
    <string name="it">IT</string>
    <string name="register">Register</string>
    <string name="password_do_not_use_usual_password_n_we_did_not_set_protection_yet">Password* do not use usual password\n(we did not set protection yet)</string>
    =======
    <string name="recipeName">Recipe Name</string>
    <string name="dateEven">Event Date (DD/MM/YY)</string>
    <string name="hourEven">Time of the Event (HH:MM)</string>
    <string name="materialNeeded">Material Needed (oven, blender…)</string>
    <string name="duration">Approximated duration</string>
    <string name="ingredients">"Ingredients "</string>
    <string name="createRecipe">Create a new Cooking Event :</string>
</resources>
