<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextRecipeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/your_next_recipe"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo_svg" />

    <TextView
        android:id="@+id/myNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myname"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="@+id/profileImage" />

    <TextView
        android:id="@+id/myProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myProfile"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/myNameTextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <ImageView
        android:id="@+id/nextRecipeImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextRecipeTextView"
        app:srcCompat="@drawable/next_recipe_image" />

    <TextView
        android:id="@+id/nextRecipeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EDE7F6"
        android:text="@string/nextRecipeName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/nextRecipeImage"
        app:layout_constraintTop_toTopOf="@+id/nextRecipeImage" />

    <TextView
        android:id="@+id/nextRecipeBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EDE7F6"
        android:text="@string/nextRecipeBy"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/nextRecipeImage"
        app:layout_constraintEnd_toEndOf="@+id/nextRecipeImage" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/upcoming_events"
        android:textSize="27sp"
        app:layout_constraintStart_toStartOf="@+id/nextRecipeTextView"
        app:layout_constraintTop_toBottomOf="@+id/nextRecipeImage" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/pasta" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/hulihuli" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/curry_vegan" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>